tests/compile_fail/from_str/struct_flat_unknown_attribute.stderr
error: expected one of: `error`, `rename`, `rename_all`
 --> tests/compile_fail/from_str/struct_flat_unknown_attribute.rs:2:12
  |
2 | #[from_str(unknown = "unknown")]
  |            ^^^^^^^
